# Scientific-Software-Design

./: README.md  README.txt  intel.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
buildScripts/: cray-compilers-cmake.sh  gnu-compilers-cmake.sh  ibm-compilers-cmake.sh  intel-compilers-cmake.sh  nag-compilers-cmake.sh  pgi-compilers-cmake.sh
ssdBuild/chapter01/figure1.4/: figure1.4Test.sh
ssdBuild/chapter02/figure2.14-15/: figure2.14-15Test.sh
ssdBuild/chapter02/figure2.8-11/: figure2.8-11Test.sh
ssdBuild/chapter03/: chapter03Test.sh
ssdSource/: CMakeLists.txt
ssdSource/appendixA/: gaussian_elimination.cpp  gaussian_elimination.h  linear_solve.F90  pseudo_gaussian.F90  thomas.F90
ssdSource/chapter01/: CMakeLists.txt
ssdSource/chapter01/figure1.4/: CMakeLists.txt  Makefile  conduction.F90  figure1.4.in  main.F90
ssdSource/chapter02/: CMakeLists.txt
ssdSource/chapter02/figure2.14-15/: CMakeLists.txt  Makefile  fun_conductor.F90  main.F90  make.out  testFunConductor.in  testFunConductor.out
ssdSource/chapter02/figure2.4/: CMakeLists.txt  gfortran_oo_hello_world.F90  hello_world.F90  oo_hello_world.F90
ssdSource/chapter02/figure2.8-11/: CMakeLists.txt  Makefile  conductor.F90  differentiator.F90  figure2.8.in  figure2.8.out  main.F90  problem.F90  testConductor.out
ssdSource/chapter03/: CMakeLists.txt  Makefile  field.F90  initializer.F90  integrable_conductor.F90  main.F90  testIntegrableConductor.in
ssdSource/chapter04/: CMakeLists.txt  Makefile  abstract_speaker.F90  astronaut.F90  main.F90
ssdSource/chapter05/: CMakeLists.txt
ssdSource/chapter05/hermetic/: CMakeLists.txt  Makefile  hermetic.F90  main.F90  vortex.F90
ssdSource/chapter05/leak/: CMakeLists.txt  Makefile  leak.F90  main.F90
ssdSource/chapter05/vortex_cpp/: CMakeLists.txt  Makefile  main.cpp  vortex.cpp  vortex.h
ssdSource/chapter06/: CMakeLists.txt
ssdSource/chapter06/common_cpp/: Ref.h  RefBase.h  fmt.h  globals.h  pointer.h
ssdSource/chapter06/fortran_abstract_calculus/: CMakeLists.txt  Makefile  chaos.out  chaosTest.F90  integrand.F90  lorenz.F90  main.F90
ssdSource/chapter06/semidiscrete_cpp/: CMakeLists.txt  Makefile  integrable_model.cpp  integrable_model.h  integrand.cpp  integrand.h  lorenz.cpp  lorenz.h  main.cpp
ssdSource/chapter07/: CMakeLists.txt
ssdSource/chapter07/strategy_cpp/: CMakeLists.txt  Makefile  explicit_euler.cpp  explicit_euler.h  integrand.cpp  integrand.h  lorenz.cpp  lorenz.h  main.cpp  model_ops.h  runge_kutta_2nd.cpp  runge_kutta_2nd.h  strategy.h  timed_lorenz.cpp  timed_lorenz.h  timed_lorenz.out
ssdSource/chapter07/strategy_surrogate_f2003/: CMakeLists.txt  Makefile  explicit_euler.F90  integrand.F90  lorenz.F90  lorenz.F90.bak  main.F90  runge_kutta_2nd.F90  strategy.F90  surrogate.F90  timed_lorenz.F90  timed_lorenz.out
ssdSource/chapter08/: CMakeLists.txt
ssdSource/chapter08/puppeteer_cpp/: CMakeLists.txt  Makefile  air.cpp  air.h  atmosphere.cpp  atmosphere.h  cloud.cpp  cloud.h  ground.cpp  ground.h  integrable_model.cpp  integrable_model.h  integrand.cpp  integrand.h  main.cpp  mat.cpp  mat.h  model_ops.h
ssdSource/chapter08/puppeteer_f2003/: CMakeLists.txt  Makefile  air.F90  atmosphere.F90  cloud.F90  global_parameters.F90  ground.F90  main.F90  weather.out
ssdSource/chapter09/: CMakeLists.txt
ssdSource/chapter09/burgers_factory_cpp/: CMakeLists.txt  Makefile  field.h  field_factory.h  initializer.cpp  initializer.h  main.cpp  periodic_6th_factory.cpp  periodic_6th_factory.h  periodic_6th_order.cpp  periodic_6th_order.h
ssdSource/chapter09/burgers_factory_f2003/: CMakeLists.txt  Makefile  field.F90  field_factory.F90  main.F90  matrix.F90  periodic_6th_factory.F90  periodic_6th_order.F90
ssdSource/chapter10/: figure_10.2.F90  figure_10.9.F90
ssdSource/chapter10/assertions/: assertion_utility.F90
ssdSource/chapter11/: Epetra_MultiVector.F90  Epetra_Vector.F90  ForTrilinos_universal.F90  ForTrilinos_utils.F90  interoperability_check.F90
ssdSource/chapter11/reference_count/: Makefile  hermetic.F90  ref_counter.F90  universal.F90
ssdSource/chapter12/: CMakeLists.txt
ssdSource/chapter12/Burgers_Trilinos_Factory_RCP_1D/: CMakeLists_serial.txt  configure_mpi  configure_serial
ssdSource/chapter12/Burgers_Trilinos_Factory_RCP_1D/src/: CMakeLists.txt  field.F90  field_factory.F90  initializer.F90  main.F90  periodic_2nd_order.F90  periodic_2nd_order_factory.F90
ssdSource/chapter12/burgers_caf_v4/: CMakeLists.txt  Makefile  periodic_2nd_order.F90
ssdSource/chapter12/burgers_caf_v5/: Makefile  field.F90  main.F90  periodic_2nd_order.F90
ssdSource/chapter12/coarrayBurgers/: Makefile  Makefile-GASNet  Makefile.inst  burgers.F90  coarrayBurgers_cce_tau.pbs  global_field.F90  global_field_async.f90  global_field_async_put.f90  main.F90  run.sh
ssdSource/chapter12/coarrayBurgers/include-files/: cray_capabilities.txt
ssdSource/chapter12/coarrayBurgersStaticTau/: CMakeLists.txt  Makefile  Makefile.inst  coarrayBurgers_cce_tau.pbs  main.F90  math_constants.F90  periodic_2nd_order.F90  run.sh
ssdSource/chapter12/coarrayBurgersStaticTau/include-files/: gfortran_capabilities.txt
